--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     neque excepturi perspiciatis.
                 </p>
                 <div class="container">
-                    <a href="https://teachablemachine.withgoogle.com/models/8Ww20B-qD/" target="_blank">
-                        <div class="button button-3">Try Me</div>
+                    <a href="login.html" target="_blank">
+                        <div class="button button-3">Get Started</div>
                     </a>
                 </div>
             </div>
@@ -319,8 +319,8 @@
                     impedit explicabo! Commodi voluptates doloribus autem, dolores, maxime iure expedita sapiente, odit
                     nemo maiores ullam perferendis officia fuga veniam!</p>
                 <div class="container">
-                    <a href="https://teachablemachine.withgoogle.com/models/8Ww20B-qD/">
-                        <div class="button button-3">Try Me</div>
+                    <a href="login.html">
+                        <div class="button button-3">Get Started</div>
                     </a>
                 </div>
             </div>
@@ -340,7 +340,7 @@
                     <a href="#"><i class="fab fa-youtube"></i></a>
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
-                <p class="rights-text">© 2023 Designed and Created By <b>Kanjul Verma</b></p>
+                <p class="rights-text">© 2023 Designed and Created By <b>Apohun Pandey</b></p>
             </div>
         </div>
     </footer>
