--- a/products.html
+++ b/products.html
@@ -329,7 +329,7 @@
               <div class="div">Login</div>
             </div>
           </div>
-          <div class="footer3">© 2023 Designed and Created By &nbsp;<b>Kanjul Verma</b></div>
+          <div class="footer3">© 2023 Designed and Created By &nbsp;<b>Apohun Pandey</b></div>
         </footer>
       </body>
       
