--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><img src="./dremreflect-logo-zip-file/png/logo-no-background.png" alt="logo" class="logo-main"></li>
             <li class="link-item"><a href="index.html" class="link active">Home</a></li>
             <li class="link-item"><a href="products.html" class="link">Products</a></li>
-            <li class="link-item"><a href="team.html" class="link">Our Team</a></li>
+            <li class="link-item"><a href="#" class="link">Our Team</a></li>
             <li class="link-item"><a href="login.html" class="link">Login</a></li>
         </ul>
     </nav>
